<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    tools:context=".MainActivity" >

       <TextView android:id="@+id/displayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:typeface="monospace"
	    android:selectAllOnFocus="true"
        android:textSize="20sp"
        android:text="@string/displayText" 
        android:textIsSelectable="true"/>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="0dip"
        android:layout_height="match_parent"
    	android:layout_weight ="1"
	    android:typeface="monospace"
    	android:layout_margin="0dip"
        android:padding="0dip" >
	    <Button
	        android:id="@+id/button11"
	    android:layout_width="0dip"
	    android:layout_height="match_parent"
	    android:layout_weight ="1"
	    android:typeface="monospace"
	    android:text="@string/button11"/>
	    <Button
	        android:id="@+id/button12"
	    android:layout_width="0dip"
	    android:layout_height="match_parent"
	    android:layout_weight ="1"
	    android:typeface="monospace"
	    android:text="@string/button12"/>    
	    <Button
	        android:id="@+id/button13"
	    android:layout_width="0dip"
	    android:layout_height="match_parent"
	    android:layout_weight ="1"
	    android:typeface="monospace"
	    android:text="@string/button13"/>    
	    <Button
	        android:id="@+id/button14"
	    android:layout_width="0dip"
	    android:layout_height="match_parent"
	    android:layout_weight ="1"
	    android:typeface="monospace"
	    android:text="@string/button14"/>
	    </TableRow>
	<TableRow    
        android:id="@+id/tableRow3"
        android:layout_width="0dip"
        android:layout_height="match_parent"
    	android:layout_weight ="1"
	    android:typeface="monospace"
        android:padding="0dip">
	    <Button
	        android:id="@+id/button21"
	    android:layout_width="0dip"
	    android:layout_height="match_parent"
	    android:layout_weight ="1"
	    android:typeface="monospace"
	    android:text="@string/button21"/>
	    <Button
	        android:id="@+id/button22"
	    android:layout_width="0dip"
	    android:layout_height="match_parent"
	    android:layout_weight ="1"
	    android:typeface="monospace"
	    android:text="@string/button22"/>
	    <Button
	        android:id="@+id/button23"
	    android:layout_width="0dip"
	    android:layout_height="match_parent"
	    android:layout_weight ="1"
	    android:text="@string/button23"/>
	    <Button
	        android:id="@+id/button24"
	    android:layout_width="0dip"
	    android:layout_height="match_parent"
	    android:layout_weight ="1"
	    android:typeface="monospace"
	    android:text="@string/button24"/>
	    </TableRow>
	    <TableRow
	       android:id="@+id/tableRow4"
	       android:layout_width="0dip"
	       android:layout_height="match_parent"
	       android:layout_weight ="1"
	    android:typeface="monospace"
	       android:padding="0dip" >
	    <Button
	        android:id="@+id/button31"
	    android:layout_width="0dip"
	    android:layout_height="match_parent"
	    android:layout_weight ="1"
	    android:typeface="monospace"
	    android:text="@string/button31"/>
	    <Button
	        android:id="@+id/button32"
	    android:layout_width="0dip"
	    android:layout_height="match_parent"
	    android:layout_weight ="1"
	    android:typeface="monospace"
	    android:text="@string/button32"/>
	    <Button
	        android:id="@+id/button33"
	    android:layout_width="0dip"
	    android:layout_height="match_parent"
	    android:layout_weight ="1"
	    android:typeface="monospace"
	    android:text="@string/button33"/>
	    <Button
	        android:id="@+id/button34"
	    android:layout_width="0dip"
	    android:layout_height="match_parent"
	    android:layout_weight ="1"
	    android:typeface="monospace"
	    android:text="@string/button34"/>
	    </TableRow>
	    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight ="1"
	    android:typeface="monospace"
        android:padding="0dip" >
	    <Button
	        android:id="@+id/button41"
	    android:layout_width="0dip"
	    android:layout_height="match_parent"
	    android:layout_weight ="1"
	    android:typeface="monospace"
	    android:text="@string/button41"/>
	    <Button
	        android:id="@+id/button42"
	    android:layout_width="0dip"
	    android:layout_height="match_parent"
	    android:layout_weight ="1"
	    android:typeface="monospace"
	    android:text="@string/button42"/>
	    <Button
	        android:id="@+id/button43"
	    android:layout_width="0dip"
	    android:layout_height="match_parent"
	    android:layout_weight ="1"
	    android:typeface="monospace"
	    android:text="@string/button43"/>
	    <Button
	        android:id="@+id/button44"
	    android:layout_width="0dip"
	    android:layout_height="match_parent" 
	    android:layout_weight ="1"
	    android:typeface="monospace"
	    android:text="@string/button44"/>
	    </TableRow>

</TableLayout>